# traditional_chinese_llama2

./: .gitignore  README.md  infer.py  infer.sh  merge.py  merge.sh  pyproject.toml  train.sh
data/: README.md  convert.py
example/basic-chat/: app.py  model.py
tc_llama2/: llama_flash_attn_monkey_patch.py  settings.py  train.py  train_backup.py
