[tool.poetry]
name = "traditional-chinese-llama2"
version = "0.1.0"
description = ""
authors = ["MIBlue119 <miblue119@gmail.com>"]
readme = "README.md"
packages = [{include = "traditional_chinese_llama2"}]

[tool.poetry.dependencies]
python = "^3.10, <=3.11"
torch = "2.0.1"
transformers = "4.31.0"
datasets = "2.13.0"
peft = "0.4.0"
accelerate = "0.21.0"
bitsandbytes = "0.40.2"
trl = "0.4.7"
safetensors = ">=0.3.1"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
loguru = "^0.7.0"
scipy = "^1.11.1"
sentencepiece = "^0.1.99"
huggingface-hub = "0.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
